--- a/css/libroextendido.css
+++ b/css/libroextendido.css
@@ -1,13 +1,13 @@
 body {
-    background-color:#F5F6FA;
+    background-color: #F5F6FA;
 }
 
-.book{
-    position:relative;
+.book {
+    position: relative;
     background: #ffffff;
     width: 60%;
     margin: 100px;
-    left:50px;
+    left: 50px;
     -webkit-box-shadow: 0 0 .5px .5px #888888;
     -moz-box-shadow: 0 0 .5px .5px #888888;
     box-shadow: 0 0 .5px .5px #888888;
@@ -17,40 +17,39 @@ body {
 
 .book img {
     box-shadow: 7px 7px 3px #888888;
-    position:relative;
-    left:20px;
-    top:30px;
-    width:150px;
+    position: relative;
+    left: 20px;
+    top: 30px;
+    width: 150px;
 }
 
 .book .ficha {
-    position:relative;
-    left:200px;
-    bottom:200px;
+    position: relative;
+    left: 200px;
+    bottom: 200px;
 }
 
-.book .descrip{
-   position: relative;
-   margin:20px;
-   bottom: 145px;
+.book .descrip {
+    position: relative;
+    margin: 20px;
+    bottom: 145px;
 }
 
-h2{
-    position:relative;
-    margin:20px;
-    top:30px;
+h2 {
+    position: relative;
+    margin: 20px;
+    top: 30px;
 }
-
 
 div.hr {
-    position:relative;
+    position: relative;
     /*left:400px;*/
-    bottom:170px;
-    background: #999  no-repeat scroll center;
+    bottom: 170px;
+    background: #999 no-repeat scroll center;
     margin-left: 15em;
     margin-right: 15em;
-    width:70%;
-    height:.05em;
+    width: 70%;
+    height: .05em;
 }
 
 div.hr hr {
@@ -63,7 +62,9 @@ div.stars {
     display: inline-block;
 }
 
-input.star { display: none; }
+input.star {
+    display: none;
+}
 
 label.star {
     float: right;
@@ -84,9 +85,13 @@ input.star-5:checked ~ label.star:before {
     text-shadow: 0 0 20px #952;
 }
 
-input.star-1:checked ~ label.star:before { color: #F62; }
+input.star-1:checked ~ label.star:before {
+    color: #F62;
+}
 
-label.star:hover { transform: rotate(-15deg) scale(1.3); }
+label.star:hover {
+    transform: rotate(-15deg) scale(1.3);
+}
 
 label.star:before {
     content: '\f006';
@@ -98,7 +103,7 @@ label.star:before {
 /* comments */
 
 #comment_form input, #comment_form textarea {
-    border: 4px solid rgba(0,0,0,0.1);
+    border: 4px solid rgba(0, 0, 0, 0.1);
     padding: 8px 10px;
 
     -webkit-border-radius: 5px;
@@ -120,7 +125,7 @@ label.star:before {
     background: -o-linear-gradient(top, #efefef, #ddd);
     background: linear-gradient(top, #efefef, #ddd);
     color: #333;
-    text-shadow: 0px 1px 1px rgba(255,255,255,1);
+    text-shadow: 0px 1px 1px rgba(255, 255, 255, 1);
     border: 1px solid #ccc;
 }
 
@@ -148,8 +153,8 @@ label.star:before {
 
 .comments {
     position: relative;
-    left:150px;
-    bottom:40px;
+    left: 150px;
+    bottom: 40px;
 }
 
 /* end comments */
@@ -174,9 +179,9 @@ label.star:before {
     padding: 10px 20px 10px 20px;
     border: solid #4cf54c 2px;
     text-decoration: none;
-    position:relative;
-    bottom:280px;
-    left:570px;
+    position: relative;
+    bottom: 280px;
+    left: 570px;
 }
 
 .btn:hover {
